# cppquamperfekt

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/cmake/: cppquamperfektConfig.cmake
src/include/cppquamperfekt/: cppquamperfekt.hpp
test/: CMakeLists.txt
